ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ui-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-ui-app.com # replace with your domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-ui-app-service
            port:
              name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-ui-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-ui-app
  template:
    metadata:
      labels:
        app: my-ui-app
    spec:
      containers:
      - name: my-ui-app
        image: comdevops/ui:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: javapipe
---
apiVersion: v1
kind: Service
metadata:
  name: my-ui-app-service
spec:
  type: ClusterIP
  selector:
    app: my-node-app
  ports:
  - name: http
    port: 80
    targetPort: 3000
